[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GameUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.8, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color(0, 0.8, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.784314)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TopLeft" type="VBoxContainer" parent="."]
margin_left = 10
margin_top = 10
margin_right = 210
margin_bottom = 60
custom_constants/separation = 5

[node name="HealthBar" type="ProgressBar" parent="TopLeft"]
margin_right = 200
margin_bottom = 20
rect_min_size = Vector2(200, 20)
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0

[node name="Label" type="Label" parent="TopLeft/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "HP: 100/100"
align = 1
valign = 1

[node name="EnergyBar" type="ProgressBar" parent="TopLeft"]
margin_top = 25
margin_right = 200
margin_bottom = 45
rect_min_size = Vector2(200, 20)
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0

[node name="Label" type="Label" parent="TopLeft/EnergyBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "EP: 100/100"
align = 1
valign = 1

[node name="TopRight" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -210
margin_top = 10
margin_right = -10
margin_bottom = 90
custom_constants/separation = 5

[node name="MoneyLabel" type="Label" parent="TopRight"]
margin_right = 200
margin_bottom = 20
text = "Gold: 1000"
align = 2

[node name="TimeLabel" type="Label" parent="TopRight"]
margin_top = 25
margin_right = 200
margin_bottom = 45
text = "12:00"
align = 2

[node name="DateLabel" type="Label" parent="TopRight"]
margin_top = 50
margin_right = 200
margin_bottom = 70
text = "Spring Day 1, Year 1"
align = 2

[node name="WeatherLabel" type="Label" parent="TopRight"]
margin_top = 80
margin_right = 200
margin_bottom = 100
text = "Weather: Sunny"
align = 2

[node name="WeatherIcon" type="TextureRect" parent="TopRight"]
margin_left = 160
margin_top = 80
margin_right = 190
margin_bottom = 110
expand = true
stretch_mode = 6

[node name="WeatherEffects" type="Label" parent="TopRight"]
margin_top = 120
margin_right = 200
margin_bottom = 180
text = "Effects:
Crop Growth: 100%
Energy Drain: 100%
Visibility: 100%"
align = 2

[node name="BottomLeft" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10
margin_top = -74
margin_right = 210
margin_bottom = -10
custom_constants/separation = 10

[node name="EquippedWeapon" type="TextureRect" parent="BottomLeft"]
margin_right = 64
margin_bottom = 64
rect_min_size = Vector2(64, 64)
expand = true
stretch_mode = 6

[node name="EquippedArmor" type="TextureRect" parent="BottomLeft"]
margin_left = 74
margin_right = 138
margin_bottom = 64
rect_min_size = Vector2(64, 64)
expand = true
stretch_mode = 6

[node name="BottomCenter" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200
margin_top = -74
margin_right = 200
margin_bottom = -10
custom_styles/panel = SubResource( 5 )

[node name="Hotbar" type="HBoxContainer" parent="BottomCenter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5
margin_top = 5
margin_right = -5
margin_bottom = -5
custom_constants/separation = 5
alignment = 1

[node name="Slot0" type="TextureRect" parent="BottomCenter/Hotbar"]
margin_left = 3
margin_right = 57
margin_bottom = 54
rect_min_size = Vector2(54, 54)
expand = true
stretch_mode = 6

[node name="Slot1" type="TextureRect" parent="BottomCenter/Hotbar"]
margin_left = 62
margin_right = 116
margin_bottom = 54
rect_min_size = Vector2(54, 54)
expand = true
stretch_mode = 6

[node name="Slot2" type="TextureRect" parent="BottomCenter/Hotbar"]
margin_left = 121
margin_right = 175
margin_bottom = 54
rect_min_size = Vector2(54, 54)
expand = true
stretch_mode = 6

[node name="Slot3" type="TextureRect" parent="BottomCenter/Hotbar"]
margin_left = 180
margin_right = 234
margin_bottom = 54
rect_min_size = Vector2(54, 54)
expand = true
stretch_mode = 6

[node name="Slot4" type="TextureRect" parent="BottomCenter/Hotbar"]
margin_left = 239
margin_right = 293
margin_bottom = 54
rect_min_size = Vector2(54, 54)
expand = true
stretch_mode = 6

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DisasterWarning" type="Label" parent="Center"]
margin_left = -200
margin_top = 100
margin_right = 200
margin_bottom = 120
custom_colors/font_color = Color(1, 0, 0, 1)
text = "WARNING: Storm approaching!"
align = 1
visible = false

[node name="NotificationLabel" type="Label" parent="Center"]
visible = false
margin_left = 480
margin_top = 270
margin_right = 480
margin_bottom = 290
align = 1
valign = 1

[node name="NotificationTimer" type="Timer" parent="Center"]
one_shot = true

[connection signal="timeout" from="Center/NotificationTimer" to="." method="_on_notification_timer_timeout"]